   renamed to opp_new and opp_free. (Beware when using opp_free: it does NOT
   call the destructor of the passed object!)
Apr 19, 2000
 - bugfix: when using datarate and propagation delay at the same output gate,
   the gate's transmissionFinishes() function returned incorrect value:
   one had to substract the propagation delay to get the correct number.
   Fixed in cGate::deliver(cMessage *msg): transmission delay calculation
   should be done _before_ propagation delay.
 - in util.h, fastconcat() renamed to opp_concat(); compatibility #define added
May 5, 2000
 - setDisplayString() now works in Tkenv (sim/cmodule.cc also affected)
 - setDisplayString() got a new argument, bool immediate.  It specifies whether
   the display string change should take effect immediately, or only after
   processing the current event (default is immediate=true).
      If several display string changes are going to be done within one event,
   then immediate=false is useful because it reduces the number of necessary
   redraws. Immediate=false also uses less stack. But its drawback is that
   a setDisplayString() followed by a send() would actually be displayed
   in reverse order (message animation first), because message animations are
   performed immediately (actually within the send() call).
 - once we have setDisplayString(), seems like we'll need a display string
   parser/assembler object to be able to easily change specific values within
   the display string without bothering the rest of it. Maybe for the some
   next version; but if you want to contribute one, go ahead :-)
May 6, 2000
 - further char * --> const char * changes
 - displayString() added to cMessage. By default it returns an empty string;
   users have to subclass cMessage and redefine displayString() to get
   messages with custom appearance in Tkenv. (Not implemented yet in Tkenv!)
May 7, 2000
 - Makefile.vc improvements from Balazs Kelemen
